# gPS5Tool

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/gPS5Tool-gui/: CMakeLists.txt  MainApplication.cpp  MainApplication.h  PortChooser.cpp  PortChooser.h  main.cpp  resources.gresources.xml
src/gPS5Tool-gui/data/: CodeDatabase.cpp  CodeDatabase.h
src/gPS5Tool-gui/flash/: NorFlashFile.cpp  NorFlashFile.h
src/gPS5Tool-gui/serial/: CommunicationLayer.cpp  CommunicationLayer.h  SerialPort.cpp  SerialPort.h
src/gPS5Tool-gui/ui/: gPS5Tool.cmb  mainWindow.ui  portChooser.ui
